project(subprojects)

add_subdirectory(c)
add_subdirectory(x)
add_subdirectory(sl)
add_subdirectory(qt)
add_subdirectory(xcb)
add_subdirectory(ipc)
add_subdirectory(vte)
add_subdirectory(gtk)
add_subdirectory(gio)
add_subdirectory(gdk3)
add_subdirectory(glib)
add_subdirectory(core)
add_subdirectory(cairo)
add_subdirectory(dconf)
add_subdirectory(gsettings)
add_subdirectory(commandline)
add_subdirectory(gio-channel)